--- a/Other/CV/CV.tex
+++ b/Other/CV/CV.tex
@@ -1,7 +1,7 @@
 \title{Curriculum Vitae}
 \author{
   Jack Ellis \\
-  jackellis1504@me.com\\
+  jackellis1504@gmail.com\\
 }
 \date{}
 \documentclass[12pt, a4paper]{article}
@@ -17,7 +17,7 @@
 \end{minipage}
 \begin{minipage}[c]{.5\textwidth}
   \raggedleft
-  email: jackellis1504@me.com\\
+  email: jackellis1504@gmail.com\\
   tel: 07891462107
 \end{minipage}
 
@@ -53,7 +53,8 @@ I have skills transferable to the workplace which include team working, effectiv
                 \\
 \end{tabular}
 \\[10pt]
-As well as working towards my degree I am also a member of a number of societies, including Improv, Radio, TEC, Film, and Pool\\
+As well as working towards my degree I am also a member of a number of societies, including URN, the Nottingham New
+Theatre, and Improv Society.\\
 \\
 With the Improv Society I have gained valuable experience speaking in front of large groups of people.
 I successfully auditioned to be part of a small troupe of 6 people, and spent 9 months planning and preparing for a show we took to Edinburgh Fringe 2016.
@@ -62,11 +63,14 @@ I also find active listening a useful skill in group work.
 Within this society I was also elected Publicity and Media Secretary.
 I like that you have to make decisions quickly and work as part of a team.\\
 \\
-With the Radio Society I have organised my own radio shows for the university radio station, utilising skills of time management, adaptability and also working around a theme.\\
+At URN I ran a show entitled 'On Call' for a year, in which I filled in if people were unable to present their shows
+last-minute. This meant I had to be prepared with a show to go at any time, leading me to prepare up to 3 shows in
+advance. I was also elected Head Of Drama for 2017-18, meaning I will be overseeing the dramatic content of URN for this
+time.\\
 \\
-With the TEC society, which is about sound, lights and stage sets for events both inside and away from the university,
-I was personally involved in setting the sound system for a nationally televised badminton competition as well as a number of small events within the university as well as the students union election night.
-From this I gained an insight into Health and Safety and working for others.\\
+Within the New Theatre, as well as acting in one of their Edinburgh Fringe 2017 shows, I have been elected Workshop
+Manager for 2017-18, meaning I will be responsible for the set design and construction for all shows that happen in this
+period, as well as maintaining and training for all tools currently in use in the workshop.\\
 \\
 During the summer of 2014 I volunteered at the Centre for Digital Innovation in Hull (C4DI).
 Whilst there my project, together with a colleague, was to research the concept of smart cities in other countries and how their technologies could work in Hull, City of Culture 2017.
