Updated CV with proper information

--- a/Other/CV/CV.tex
+++ b/Other/CV/CV.tex
@@ -11,14 +11,14 @@
 
 \begin{minipage}[c]{.5\textwidth}
   \raggedright
-  73 Lenton Boulevard\\
+  5 Church Grove\\
   Nottingham\\
-  NG7 2FQ
+  NG7 2FG
 \end{minipage}
 \begin{minipage}[c]{.5\textwidth}
   \raggedleft
   email: jackellis1504@gmail.com\\
-  tel: 07891462107
+  tel: 07948437374
 \end{minipage}
 
 \vspace{5mm}
