--- a/.vim/skeleton.tex
+++ b/.vim/skeleton.tex
@@ -6,11 +6,14 @@
 }
 \date{}
 \documentclass[12pt, a4paper]{report}
+\usepackage{graphicx}
+\graphicspath{{Images/}}
+
+\usepackage{listings}
 \lstset{
   basicstyle=\ttfamily
 }
 
-\graphicspath{ {Images/} }
 \begin{document}
 \maketitle
 
