--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -1,9 +1,8 @@
 \documentclass[10pt]{article}
-%preamble
 \usepackage{array, xcolor, lipsum}
 \usepackage[margin=3cm]{geometry}
 
-\title{\bfseries Jack Ellis}
+\title{Jack Ellis}
 \date{}
 
 \definecolor{lightgray}{gray}{0.8}
@@ -16,9 +15,9 @@
 \vspace{1em}
 \begin{minipage}[ht]{0.48\textwidth}
     \begin{flushleft}
-        4 Falcon Close\\
+        Flat 4, 61 Mansfield Road\\
         Nottingham\\
-        NG7 2DL
+        NG1 3FH
     \end{flushleft}
 \end{minipage}
 \begin{minipage}[ht]{0.48\textwidth}
@@ -30,7 +29,7 @@
 \end{minipage}
 
 \section*{Profile}
-I am a Computer Science graduand soon to receive a 2:1 MSci.
+I am a Computer Science graduate with a 2:1 MSci.
 I have excellent communication and administrative skills developed from being a member of a number of committees during my time at the University of Nottingham.
 I am a strong worker under pressure, able to quickly make decisions based on information available to me, and I have a good ability to convert someone's request into a more technical format, whatever that format might be.
 I am also a strong collaborator within a team, and am always keen to share any experience, tips, or tricks with those who need or want them in order for the team I am a part of to be as strong as it can be.
@@ -53,7 +52,7 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 Programming Languages: C++, JavaScript, HTML, CSS, SQL, PHP, Haskell\\
 Libraries/APIs: OpenGL, d3, jQuery\\
-Development Enironments: MS Visual Studio, vi, GitHub, IntelliJ
+Development Environments: MS Visual Studio, vi, GitHub, IntelliJ
 
 \vskip 5mm
 
