--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -36,7 +36,7 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Education}
 \begin{tabular}{L!{\VRule}R}
-    2015--present&{\bf University of Nottingham, MSc Computer Science, 2:1}\\
+    2015--present&\bf University of Nottingham, MSc Computer Science, 2:1\\
                  &Modules including:\\
                  &- C++ Programming (77\%)\\
                  &- Fundamentals of Information Visualisation (83\%)\\
@@ -46,6 +46,14 @@ I am also a strong collaborator within a team, and am always keen to share any e
               &Maths A\\
               &Physics B\\
               &Chemistry B\\
+\end{tabular}
+
+\section*{Experience}
+\begin{tabular}{L!{\VRule}R}
+    2019--present&\bf Web Developer, Imaginaire Digital\\
+                 &Responsibilities including:\\
+                 &- Front- and back-end development\\
+                 &- Product management
 \end{tabular}
 
 \section*{Technical Skills/Projects}
