--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -58,9 +58,9 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Technical Skills/Projects}
 
-Programming Languages: C++, JavaScript, HTML, CSS, SQL, PHP, Haskell\\
-Libraries/APIs: OpenGL, d3, jQuery\\
-Development Environments: MS Visual Studio, vi, GitHub, IntelliJ
+Programming Languages: C++, CSS/SASS, Haskell, HTML, JavaScript, PHP, SQL\\
+Libraries/APIs: Bootstrap, d3, jQuery, OpenGL\\
+Development Environments: GitHub, IntelliJ, MS Visual Studio, vi
 
 \vskip 5mm
 
