--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -36,7 +36,7 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Education}
 \begin{tabular}{L!{\VRule}R}
-    2015--present&\bf University of Nottingham, MSc Computer Science, 2:1\\
+    2015--2019&\bf University of Nottingham, MSc Computer Science, 2:1\\
                  &Modules including:\\
                  &- C++ Programming (77\%)\\
                  &- Fundamentals of Information Visualisation (83\%)\\
@@ -50,16 +50,20 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Experience}
 \begin{tabular}{L!{\VRule}R}
-    2019--present&\bf Web Developer, Imaginaire Digital\\
-                 &Responsibilities including:\\
-                 &- Front- and back-end development\\
-                 &- Product management
+    2019--2020&   \bf Back-End Developer, Fifteen Design\\
+              & Responsibilities including:\\
+              & - Development of new websites using Symfony/Laravel and Wordpress\\
+              & - Bug fixes and support for existing websites\\
+    2019--2019&\bf Web Developer, Imaginaire Digital\\
+              & Responsibilities including:\\
+              & - Front- and back-end development\\
+              & - Product management
 \end{tabular}
 
 \section*{Technical Skills/Projects}
 
 Programming Languages: C++, CSS/SASS, Haskell, HTML, JavaScript, PHP, SQL\\
-Libraries/APIs: Bootstrap, d3, jQuery, OpenGL\\
+Libraries/APIs: Bootstrap, d3, jQuery, OpenGL, Vue, Laravel, Symfony\\
 Development Environments: GitHub, IntelliJ, MS Visual Studio, vi
 
 \vskip 5mm
