Updated CV now that I'm all employed again

--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -2,7 +2,7 @@
 \usepackage{array, xcolor, lipsum}
 \usepackage[margin=3cm]{geometry}
 
-\title{Jack Ellis}
+%\title{Jack Ellis}
 \date{}
 
 \definecolor{lightgray}{gray}{0.8}
@@ -11,21 +11,21 @@
 \newcommand\VRule{\color{lightgray}\vrule width 0.5pt}
 
 \begin{document}
-\maketitle
+%\maketitle
 \vspace{1em}
 \begin{minipage}[ht]{0.48\textwidth}
-    \begin{flushleft}
-        Flat 4, 61 Mansfield Road\\
+  \begin{flushleft}
+    Flat 4, 61 Mansfield Road\\
         Nottingham\\
         NG1 3FH
-    \end{flushleft}
+  \end{flushleft}
 \end{minipage}
 \begin{minipage}[ht]{0.48\textwidth}
-    \begin{flushright}
-        email: jackellis1504@gmail.com\\
+  \begin{flushright}
+    email: jackellis1504@gmail.com\\
         tel: 07948437374\\
         git: github.com/GingertronMk1
-    \end{flushright}
+  \end{flushright}
 \end{minipage}
 
 \section*{Profile}
@@ -36,7 +36,7 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Education}
 \begin{tabular}{L!{\VRule}R}
-    2015--2019&\bf University of Nottingham, MSc Computer Science, 2:1\\
+  2015--2019&\bf University of Nottingham, MSc Computer Science, 2:1\\
                  &Modules including:\\
                  &- C++ Programming (77\%)\\
                  &- Fundamentals of Information Visualisation (83\%)\\
@@ -50,20 +50,29 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Experience}
 \begin{tabular}{L!{\VRule}R}
-    2019--2020&   \bf Back-End Developer, Fifteen Design\\
-              & Responsibilities including:\\
-              & - Development of new websites using Symfony/Laravel and Wordpress\\
-              & - Bug fixes and support for existing websites\\
+  2020--present&   \bf Developer, We Are Sweet\\
+    & I am presently responsible for the maintenance and expansion of a large ticketing website built using Yii2.\par
+
+   \\
+
+  2019--2020&   \bf Back-End Developer, Fifteen Design\\
+    & I was responsible for the development and maintenance of a number of php-based websites, built using WordPress, Laravel, and Symfony.\par
+
+   I was initially responsible for the creation of a brochure site for Birch Bedrooms, taking a design from a series of InVision drawings and converting them into a full responsive Wordpress site, liaising with the designer about any issues or inconsistencies that I noticed during the process.\par
+
+   I was also tasked with updating the website for Birmingham Metropolitan College with new features to add to their application system - this website made heavy use of custom Wordpress plugins for which there was no real documentation, as well as a bridge API to pass data back and forth to their custom student/course management system, Unit-e.\\
+
+   \\
+
     2019--2019&\bf Web Developer, Imaginaire Digital\\
-              & Responsibilities including:\\
-              & - Front- and back-end development\\
-              & - Product management
+    & Here I was jesponsible for the development of a client website using Wordpress and a custom theme, as well as an internal dashboard system built in Laravel and Laravel Nova. Also involved in creating automation scripts for easier creation of development environments.\\
+
 \end{tabular}
 
 \section*{Technical Skills/Projects}
 
 Programming Languages: C++, CSS/SASS, Haskell, HTML, JavaScript, PHP, SQL\\
-Libraries/APIs: Bootstrap, d3, jQuery, OpenGL, Vue, Laravel, Symfony\\
+Libraries/APIs/Frameworks: Bootstrap, d3, jQuery, OpenGL, Vue, Laravel, Symfony, Yii2\\
 Development Environments: GitHub, IntelliJ, MS Visual Studio, vi
 
 \vskip 5mm
