--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -1,6 +1,8 @@
 \documentclass[10pt]{article}
 \usepackage{array, xcolor, lipsum}
-\usepackage[margin=3cm]{geometry}
+\usepackage[margin={2cm,1cm}]{geometry}
+
+\pagenumbering{gobble}
 
 %\title{Jack Ellis}
 \date{}
@@ -12,12 +14,12 @@
 
 \begin{document}
 %\maketitle
-\vspace{1em}
+\vspace{-1em}
 \begin{minipage}[ht]{0.48\textwidth}
   \begin{flushleft}
     Flat 104, The Habitat\\
-        Nottingham\\
-        NG1 1GJ
+    Nottingham\\
+    NG1 1GJ
   \end{flushleft}
 \end{minipage}
 \begin{minipage}[ht]{0.48\textwidth}
@@ -51,7 +53,11 @@ I am also a strong collaborator within a team, and am always keen to share any e
 \section*{Experience}
 \begin{tabular}{L!{\VRule}R}
   2020--present&   \bf Developer, We Are Sweet\\
-    & I am presently responsible for the maintenance and expansion of a large ticketing website built using Yii2.\par
+    & Responsible for the maintenance, support, and feature adding of major PHP projects, including a building management web application and a senior care provider system. Within these projects I have worked specifically on back-end improvements, including a bulk import system, an SMS-based job signoff system, and a document publishing scheduler.\\
+
+    & Shortly after the conclusion of my first year in the role the client for which I did the bulk of my work signed on for an extended "VIP" contract. This was in large part thanks to the work I did on the project, and my responsibilities were extended to that of a de facto lead developer.\\
+    
+    & Alongside these development roles I am also responsible for the curation of social media posts within the company as "Social Media Champion".\\
 
    \\
 
@@ -64,8 +70,10 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
    \\
 
-    2019--2019&\bf Web Developer, Imaginaire Digital\\
-    & Here I was jesponsible for the development of a client website using Wordpress and a custom theme, as well as an internal dashboard system built in Laravel and Laravel Nova. Also involved in creating automation scripts for easier creation of development environments.\\
+  2019--2019&\bf Web Developer, Imaginaire Digital\\
+    & Here I was responsible for the development of a client website using Wordpress and a custom theme, as well as an internal dashboard system built in Laravel and Laravel Nova. Also involved in creating automation scripts for easier creation of development environments.\\
+
+    \\
 
 \end{tabular}
 
