--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -11,24 +11,26 @@
 \newcolumntype{L}{>{\raggedleft}p{0.14\textwidth}}
 \newcolumntype{R}{p{0.8\textwidth}}
 \newcommand\VRule{\color{lightgray}\vrule width 0.5pt}
+\long\def\/*#1*/{}
+
 
 \begin{document}
-%\maketitle
-\vspace{-1em}
-\begin{minipage}[ht]{0.48\textwidth}
+\noindent
+\begin{minipage}[ht]{0.5\textwidth}
   \begin{flushleft}
     Flat 104, The Habitat\\
     Nottingham\\
     NG1 1GJ
   \end{flushleft}
-\end{minipage}
-\begin{minipage}[ht]{0.48\textwidth}
+\end{minipage}%
+\noindent
+\begin{minipage}[ht]{0.5\textwidth}
   \begin{flushright}
     email: jackellis1504@gmail.com\\
-        tel: 07948437374\\
-        git: github.com/GingertronMk1
+    tel: 07948437374\\
+    git: github.com/GingertronMk1
   \end{flushright}
-\end{minipage}
+\end{minipage}%
 
 \section*{Profile}
 I am a Computer Science graduate with a 2:1 MSci.
@@ -38,16 +40,16 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
 \section*{Education}
 \begin{tabular}{L!{\VRule}R}
-  2015--2019&\bf University of Nottingham, MSc Computer Science, 2:1\\
-                 &Modules including:\\
-                 &- C++ Programming (77\%)\\
-                 &- Fundamentals of Information Visualisation (83\%)\\
-                 &- Software Engineering Group Project (90\%)\\
-                 &- Individual Programming Project (70\%)\\[5pt]
-    2013--2015&{\bf Beverley Joint 6th Form, A-Levels}\\
-              &Maths A\\
-              &Physics B\\
-              &Chemistry B\\
+  2015--2019    &\bf University of Nottingham, MSc Computer Science, 2:1\\
+   \/* Empty */  & Modules including:\\
+   \/* Empty */  & - C++ Programming (77\%)\\
+   \/* Empty */  & - Fundamentals of Information Visualisation (83\%)\\
+   \/* Empty */  & - Software Engineering Group Project (90\%)\\
+   \/* Empty */  & - Individual Programming Project (70\%)\\[5pt]
+  2013--2015    &{\bf Beverley Joint 6th Form, A-Levels}\\
+   \/* Empty */  & Maths A\\
+   \/* Empty */  & Physics B\\
+   \/* Empty */  & Chemistry B\\
 \end{tabular}
 
 \section*{Experience}
