More CV Updates

--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -1,10 +1,12 @@
 \documentclass[10pt]{article}
+\author{Jack Ellis}
 \usepackage{array, xcolor, lipsum}
 \usepackage[margin={2cm,1cm}]{geometry}
+\usepackage{titling}
 
 \pagenumbering{gobble}
 
-%\title{Jack Ellis}
+\title{}
 \date{}
 
 \definecolor{lightgray}{gray}{0.8}
@@ -15,6 +17,10 @@
 
 
 \begin{document}
+
+\setlength{\droptitle}{-8em}   % This is your set screw
+\maketitle
+
 \noindent
 \begin{minipage}[ht]{0.5\textwidth}
   \begin{flushleft}
