--- a/CV/Dev/CV.tex
+++ b/CV/Dev/CV.tex
@@ -3,6 +3,7 @@
 \usepackage{array, xcolor, lipsum}
 \usepackage[margin={2cm,1cm}]{geometry}
 \usepackage{titling}
+\usepackage{longtable}
 
 \pagenumbering{gobble}
 
@@ -39,7 +40,7 @@
 \end{minipage}%
 
 \section*{Profile}
-I am a Computer Science graduate with a 2:1 MSci.
+I am a back-end-oriented web developer with a 2:1 MSci in Computer Science.
 I have excellent communication and administrative skills developed from being a member of a number of committees during my time at the University of Nottingham.
 I am a strong worker under pressure, able to quickly make decisions based on information available to me, and I have a good ability to convert someone's request into a more technical format, whatever that format might be.
 I am also a strong collaborator within a team, and am always keen to share any experience, tips, or tricks with those who need or want them in order for the team I am a part of to be as strong as it can be.
@@ -59,12 +60,16 @@ I am also a strong collaborator within a team, and am always keen to share any e
 \end{tabular}
 
 \section*{Experience}
-\begin{tabular}{L!{\VRule}R}
+\begin{longtable}{L!{\VRule}R}
   2020--present&   \bf Developer, We Are Sweet\\
     & Responsible for the maintenance, support, and feature adding of major PHP projects, including a building management web application and a senior care provider system. Within these projects I have worked specifically on back-end improvements, including a bulk import system, an SMS-based job signoff system, and a document publishing scheduler.\\
 
-    & Shortly after the conclusion of my first year in the role the client for which I did the bulk of my work signed on for an extended "VIP" contract. This was in large part thanks to the work I did on the project, and my responsibilities were extended to that of a de facto lead developer.\\
-    
+    & Shortly after the conclusion of my first year in the role the client for which I did the bulk of my work signed on for an extended "VIP" contract.
+      This was in large part thanks to the work I did on the project, and my responsibilities were extended to that of a de facto lead developer.\\
+
+    & As well as these back-end-oriented tasks I was tasked with creating an edetail application for a pharmaceutical company, which was a static project created entirely in Vue.js and SASS.
+      Part of this work involved teaching and mentoring a company intern on how to use Vue, which was very well received.\\
+
     & Alongside these development roles I am also responsible for the curation of social media posts within the company as "Social Media Champion".\\
 
    \\
@@ -83,18 +88,18 @@ I am also a strong collaborator within a team, and am always keen to share any e
 
     \\
 
-\end{tabular}
+\end{longtable}
 
 \section*{Technical Skills/Projects}
 
 Programming Languages: C++, CSS/SASS, Haskell, HTML, JavaScript, PHP, SQL\\
 Libraries/APIs/Frameworks: Bootstrap, d3, jQuery, OpenGL, Vue, Laravel, Symfony, Yii2\\
-Development Environments: GitHub, IntelliJ, MS Visual Studio, vi
+Development Environments: GitHub, IntelliJ, MS Visual Studio Code, vi
 
 \vskip 5mm
 
-In addition to the projects I worked on as part of my degree (which can be found under the \emph{Time} repository in the GitHub link above) I am also a contributor to the Nottingham New Theatre History Project, mostly in a data entry role.
-As well as this I created a website designed to show statistics and information about the links between actors at the Nottingham New Theatre, available at \verb|gingertronmk1.github.io|, using JavaScript and the d3 library.
+I am a strong advocate of coding standards, and make \verb|eslint| and \verb|php-cs-fixer| standard parts of any personal projects I undertake, as well as implementing them on existing projects at We Are Sweet.
+In the GitHub repository linked at the top of this document ou can find a number of personal projects, predominantly Laravel-based, which I use to strengthen my knowledge and understanding of the code concepts I work on professionally.
 
 \par
 
@@ -104,7 +109,7 @@ I carried out user testing and adjusted various aspects of the game based upon f
 
 \section*{Additional Experience and Extracurriculars}
 
-As well as working towards my degree I am also a member of a number of societies, including University Radio Nottingham, the Nottingham New Theatre, and the Improv Society.\\
+As well as working towards my degree I was involved with a number of societies at university, including University Radio Nottingham, the Nottingham New Theatre, and the Improv Society.\\
 
 At URN I was on their committee as Head Of Drama, responsible for overseeing all dramatic content produced by the station in that time.
 This required that I organise large groups of people into the same studio at the same time in order to record the audio, and then edit it down into something amusing.\\
